--- a/003FPGASoftcoresAndIPAcquisition/Week01/nios_lab_top.qsf
+++ b/003FPGASoftcoresAndIPAcquisition/Week01/nios_lab_top.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 10M08SAU169C8G
 set_global_assignment -name TOP_LEVEL_ENTITY nios_lab_top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:50:00  AUGUST 07, 2017"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "17.0.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -51,6 +51,11 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 
 
 set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to CLK12M
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to SEN_INT1
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to SEN_INT2
+set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to SEN_SDO
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to SEN_SPC
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to SEN_SDI
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[7]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[6]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[5]
@@ -59,6 +64,7 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[3]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[2]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[1]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to LED[0]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to SEN_CS
 
 #============================================================
 # CLOCK
@@ -95,6 +101,18 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[7]
 #============================================================
 # ACCELEROMETER SENSOR
 #============================================================
+set_location_assignment PIN_J5 -to SEN_INT1
+set_location_assignment PIN_L4 -to SEN_INT2
+set_location_assignment PIN_J7 -to SEN_SDI
+set_location_assignment PIN_K5 -to SEN_SDO
+set_location_assignment PIN_J6 -to SEN_SPC
+set_location_assignment PIN_L5 -to SEN_CS
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SEN_INT1
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SEN_INT2
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SEN_SDI
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SEN_SDO
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SEN_SPC
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SEN_CS
 
 
 
@@ -122,8 +140,8 @@ set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
 
 set_global_assignment -name ENABLE_DEVICE_WIDE_RESET ON
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name QIP_FILE nios_sys_core/synthesis/core.qip
+set_global_assignment -name QIP_FILE nios_sys/synthesis/nios_sys.qip
 set_global_assignment -name VHDL_FILE nios_lab_top.vhd
 set_global_assignment -name VHDL_FILE RESET_GEN.vhd
 set_global_assignment -name SDC_FILE nios_lab_top.sdc
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
